--- a/config/yugabyte/featurebench_copycommand.yaml
+++ b/config/yugabyte/featurebench_copycommand.yaml
@@ -7,6 +7,16 @@ batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
+microbenchmark:
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.CopyCommandBenchmark
+    properties:
+        rows: 100
+        columns: 10
+        indexes: 2
+        rowspertransaction: 1000
+#        tableName: accounts
+#        filePath: accounts.csv
+
 works:
     work:
         time: 10
@@ -15,6 +25,3 @@ works:
 transactiontypes:
     transactiontype:
         name: FeatureBench
-microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
-    properties:
