--- a/config/yugabyte/featurebench_select.yaml
+++ b/config/yugabyte/featurebench_select.yaml
@@ -5,8 +5,8 @@ username: yugabyte
 password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderthreads: 1
-terminals: 1
+loaderThreads: 6
+terminals: 6
 works:
     work:
         time: 10
