--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -5,20 +5,21 @@ username: yugabyte
 password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderThreads: 6
-terminals: 6
+loaderThreads: 1
+terminals: 1
+retries: 1
 works:
     work:
-#        time: 10
+        time: 10
         serial: true
-#        active_terminals: 1
-#        rate: 1000
+        active_terminals: 1
+        rate: 1000
         weights: 100
 transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.CopyCommandBenchmark
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
     properties:
         tableName: accounts
         columns: 10
