--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -5,7 +5,7 @@ username: yugabyte
 password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderThreads: 1
+loaderthreads: 1
 terminals: 1
 works:
     work:
@@ -26,3 +26,4 @@ microbenchmark:
         indexes: 2
         filePath: accounts.csv
         rowsPerTransaction: 2000
+
