--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -36,13 +36,15 @@ microbenchmark:
           - table: accounts
             rows: 1000
             columns:
-                id: GetIntPrimaryKey(1, 1000) # providing start and end index
-                name: NumberToIdString(16) # providing desiredLength of string
-          - table: accounts
-            rows: 1000
-            columns:
-                id: GetIntPrimaryKey(1, 1000) # providing start and end index
-                name: NumberToIdString(16) # providing desiredLength of string
+              -   name: id
+                  util: RandomNumber
+                  params:
+                      - 1
+                      - 1000
+#              -   name: name
+#                  util: NumberToIdString
+#                  params:
+#                      - 16
 
 
 
