--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -28,13 +28,12 @@ microbenchmark:
         rowsPerTransaction: 2000
         create:
             - DROP TABLE IF EXISTS accounts;
-            - CREATE TABLE accounts (id int NOT NULL, name varchar(64) NOT NULL, CONSTRAINT pk_accounts PRIMARY KEY (id));
-            - CREATE INDEX idx_accounts_name ON accounts (name);
+            - CREATE TABLE accounts (id int NOT NULL);
         cleanup:
             - DROP TABLE accounts;
         loadRules:
           - table: accounts
-            rows: 1000
+            rows: 2
             columns:
               -   name: id
                   util: RandomNumber
