adding demos from yaml-rnd

--- a/config/yugabyte/demo/featurebench_sampleimplementation_4.yaml
+++ b/config/yugabyte/demo/featurebench_sampleimplementation_4.yaml
@@ -45,5 +45,5 @@ microbenchmark:
 #                            params:
 #                                - 5
 #                                - 10
-        cleanup:
-            - DROP TABLE accounts;
+#        cleanup:
+#            - DROP TABLE accounts;
