--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -9,16 +9,13 @@ loaderthreads: 1
 terminals: 1
 works:
     work:
-        time: 2
-#        serial: true
+        time: 3
         active_terminals: 1
         rate: 1000
-        weights: 50,50
         warmup: 0
-transactiontypes:
-    transactiontype:
-        - name: FeatureBench
-        - name: FeatureBench
+#transactiontypes:
+#    transactiontype:
+
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBMicroBenchmarkImplementation
     properties:
@@ -39,36 +36,39 @@ microbenchmark:
                         params:
                             - 10
         executeRules:
-            -   transaction_name: Account_query1
+            -   name: Account_query1
                 weight: 50
-                query:
-                    queries:
-                        - SELECT * FROM accounts WHERE id > ?
-                        - SELECT * FROM accounts WHERE id <= ?
-                    bindings:
-                        -   name: RowRandomBoundedInt
-                            params:
-                                - 5
-                                - 10
-                        -   name: RowRandomBoundedInt
-                            params:
-                                - 5
-                                - 10
-            -   transaction_name: Account_query2
+                queries:
+                    -   query: SELECT * FROM accounts WHERE id > ?
+                        bindings:
+                            -   name: RandomNumber
+                                params:
+                                    - 5
+                                    - 8
+                    -   query: SELECT * FROM accounts WHERE id <= ?
+                        bindings:
+                            -   name: RandomNumber
+                                params:
+                                    - 5
+                                    - 8
+            -   name: Account_query2
                 weight: 50
-                query:
-                    queries:
-                        - SELECT * FROM accounts WHERE id < ?
-                        - SELECT * FROM accounts WHERE id >= ?
-                    bindings:
-                        -   name: RowRandomBoundedInt
-                            params:
-                                - 5
-                                - 10
-                        -   name: RowRandomBoundedInt
-                            params:
-                                - 5
-                                - 10
+                queries:
+                    -   query: SELECT * FROM accounts WHERE id > ?
+                        bindings:
+                            -   name: RandomNumber
+                                params:
+                                    - 5
+                                    - 8
+                    -   query: SELECT * FROM accounts WHERE id <= ?
+                        bindings:
+                            -   name: RandomNumber
+                                params:
+                                    - 5
+                                    - 8
+
+
+
 
 
 
