minor name changes

--- a/config/yugabyte/demo/featurebench_colocated.yaml
+++ b/config/yugabyte/demo/featurebench_colocated.yaml
@@ -49,7 +49,7 @@ microbenchmark:
                                     - 4
                     -   query: SELECT * FROM accounts WHERE id<=?
                         bindings:
-                            -   name: RandomNumber
+                            -   util: RandomNumber
                                 params:
                                     - 5
                                     - 10
