fixed YAML util name

--- a/config/yugabyte/demo/featurebench_microbenchmark_1.yaml
+++ b/config/yugabyte/demo/featurebench_microbenchmark_1.yaml
@@ -28,7 +28,7 @@ microbenchmark:
                 rows: 100
                 columns:
                     - name : dname
-                      util : RandomAstring
+                      util : RandomAString
                       params:
                           - 1
                           - 20
