--- a/config/yugabyte/demo/featurebench_santanu_test.yaml
+++ b/config/yugabyte/demo/featurebench_santanu_test.yaml
@@ -41,7 +41,7 @@ microbenchmark:
                             - 100
                             - 500
                     -   name: k2
-                        util: RandomAstring
+                        util: RandomAString
                         params:
                             - 2
                             - 5
@@ -51,7 +51,7 @@ microbenchmark:
                             - 5
                             - 6
                     -   name: v2
-                        util: RandomAstring
+                        util: RandomAString
                         params:
                             - 2
                             - 5
