adding postgres dependency in yugabyte profile for postgres,crdb support as well

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
                     <artifactId>jdbc-yugabytedb</artifactId>
                     <version>42.3.4</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <version>42.4.0</version>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
