readme added and util typos fixed

--- a/config/yugabyte/demo/featurebench_santanu_t1_10_10k.yaml
+++ b/config/yugabyte/demo/featurebench_santanu_t1_10_10k.yaml
@@ -63,12 +63,12 @@ microbenchmark:
                     -   name: c6
                         util: RandomBoolean
                     -   name: c7
-                        util: RandomAstring
+                        util: RandomAString
                         params:
                             - 1
                             - 5
                     -   name: c8
-                        util: RandomAstring
+                        util: RandomAString
                         params:
                             - 1
                             - 10
